# AEM-CLP

./: .gitignore  CMakeLists.txt  COMPLETION_CHECKLIST.md  IMPLEMENTATION_GUIDE.md  Informe_cambios.md  QUICK_START.md  README.md  VNS_IMPLEMENTATION_SUMMARY.md  VNS_IMPROVEMENT_STRATEGY.md  bsg_log_20260610_203255.txt  results_20260610_155349.txt
metasolver/: LocalSearch.cpp  LocalSearch.h  NeighborhoodOperator.h  SolverConfig.h  VNS.cpp  VNS.h
metasolver/mcts/: DecisionKey.cpp  DecisionKey.h  MCTS.cpp  MCTS.h  MCTSNode.cpp  MCTSNode.h  MCTSStats.cpp  MCTSStats.h
metasolver/strategies/: BSG.cpp  BSG.h  BSG_VCS_MCTS.cpp  BSG_VCS_MCTS.h  BlockRotateOperator.cpp  BlockRotateOperator.h  BlockSwapOperator.cpp  BlockSwapOperator.h  MCTSGreedy.cpp  MCTSGreedy.h  RemoveReinsertOperator.cpp  RemoveReinsertOperator.h
problems/clp/: clpState.cpp  main_clp.cpp
problems/clp/objects2/: AABB.cpp  Block.cpp  Block.h  Space.cpp  SpaceSet.cpp  SpaceSet.h
scripts/: bsg_compare.py  run_bsg.py
